Modified ingredients controller
